fix(zIndex): 修复z-index

--- a/src/ImageEditor/components/OperationButtonOptions/index.module.less
+++ b/src/ImageEditor/components/OperationButtonOptions/index.module.less
@@ -4,7 +4,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  z-index: 1000;
+  z-index: var(--tiny-react-image-editor-zIndex, 1000);
   font-family: @font-family;
 
   .content-container {
