--- a/src/ImageEditor/components/Textarea/index.module.less
+++ b/src/ImageEditor/components/Textarea/index.module.less
@@ -5,6 +5,7 @@
   position: absolute;
   left: 0;
   top: 0;
+  z-index: var(--tiny-react-image-editor-zIndex, 1000);
   margin: 0;
   padding: 0;
   background-color: transparent;
